// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.domain.admin.v1;

import "com/digitalasset/canton/domain/admin/v0/sequencer_initialization_snapshot.proto";
import "com/digitalasset/canton/protocol/v1/sequencing.proto";
import "com/digitalasset/canton/topology/admin/v0/topology_ext.proto";
import "scalapb/scalapb.proto";

// Includes sufficient detail for:
//  - the sequencer to generate its own key to return the public key to the domain node
//  - topology and additional bootstrap information
message InitRequest {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  string domain_id = 1;
  // a topology snapshot up until the point where this sequencer's key is registered
  com.digitalasset.canton.protocol.v0.TopologyTransactions topology_snapshot = 2;
  com.digitalasset.canton.protocol.v1.StaticDomainParameters domain_parameters = 4;
  // optional - snapshot to initialize sequencer from
  com.digitalasset.canton.domain.admin.v0.SequencerSnapshot snapshot = 3;
}
